tdf#90828 FILESAVE:XLSX export of underline color for text inside textbox

Problem Description:
Unable to save .xlsx with underline color for text inside textbox.

Current behavior:
After RT text underline color was not exported

Expected behaviour:
After RT text underline color should export

Added export support for <a:uFill>

Change-Id: If8ffeb07f2f5e0b768689647e480792ea9c8540a
Reviewed-on: https://gerrit.libreoffice.org/15514
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>