sc/qa/unit/subsequent_export-test.cxx
@@ -141,6 +141,7 @@ public:
     void testFontSize();
     void testSheetCharacterKerningSpace();
     void testSheetCondensedCharacterSpace();
+    void testTextUnderlineColor();
 
     CPPUNIT_TEST_SUITE(ScExportTest);
     CPPUNIT_TEST(test);
@@ -192,6 +193,7 @@ public:
     CPPUNIT_TEST(testFontSize);
     CPPUNIT_TEST(testSheetCharacterKerningSpace);
     CPPUNIT_TEST(testSheetCondensedCharacterSpace);
+    CPPUNIT_TEST(testTextUnderlineColor);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -2594,6 +2596,21 @@ void ScExportTest::testSheetCondensedCharacterSpace()
 
     xDocSh->DoClose();
 }
+
+void ScExportTest::testTextUnderlineColor()
+{
+
+    ScDocShellRef xDocSh = loadDoc("underlineColor.", XLSX);
+    CPPUNIT_ASSERT(xDocSh.Is());
+
+    xmlDocPtr pDoc = XPathHelper::parseExport(&(*xDocSh), m_xSFactory, "xl/drawings/drawing1.xml", XLSX);
+    CPPUNIT_ASSERT(pDoc);
+    OUString color = getXPath(pDoc,
+            "/xdr:wsDr/xdr:twoCellAnchor/xdr:sp[1]/xdr:txBody/a:p[1]/a:r[1]/a:rPr/a:uFill/a:solidFill/a:srgbClr", "val");
+    // make sure that the underline color is RED
+    CPPUNIT_ASSERT(color.equals("ff0000"));
+}
+
 
 CPPUNIT_TEST_SUITE_REGISTRATION(ScExportTest);
 
